--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,17 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                    <groupId>org.springframework.boot</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
 
         <!--这个是单元测试的依赖，现在没有进行单元测试，所以这个依赖现在可以没有-->
@@ -43,7 +54,7 @@
 
     <build>
         <plugins>
-
+            <!-- 该插件父工程已有,不继承父工程,需要显式插件配置 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -62,7 +73,8 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.wsleli.SpringBootDemoApplication</mainClass>
-                    <skip>true</skip>
+                    <!-- 要打包为可运行的jar包，需要设置为false -->
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
