--- a/pom.xml
+++ b/pom.xml
@@ -14,55 +14,22 @@
         <spring-boot.version>2.6.13</spring-boot.version>
     </properties>
 
-    <!--创建多环境-->
-    <profiles>
-        <!--定义具体的环境:开发环境-->
-        <profile>
-            <!--定义环境对应的唯—名称-->
-            <id>dev</id>
-            <!--定义环境中专用的属性值-->
-            <properties>
-                <profile.active>dev</profile.active>
-            </properties>
-        </profile>
-
-        <!--定义具体的环境:生产环境-->
-        <profile>
-            <id>pro</id>
-            <properties>
-                <profile.active>pro</profile.active>
-            </properties>
-            <!--设置默认启动-->
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-        </profile>
-
-        <!--定义具体的环境:测试环境-->
-        <profile>
-            <id>test</id>
-            <properties>
-                <profile.active>test</profile.active>
-            </properties>
-        </profile>
-    </profiles>
-
     <dependencies>
-        <!--该依赖就是在创建 SpringBoot 工程勾选的那个 Spring Web 产生的-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                    <groupId>org.springframework.boot</groupId>
-                </exclusion>
-            </exclusions>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.0</version>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jetty</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.16</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
         <!--这个是单元测试的依赖，现在没有进行单元测试，所以这个依赖现在可以没有-->
@@ -70,13 +37,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <!-- 解决警告提示 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 
@@ -106,7 +66,7 @@
                 </configuration>
             </plugin>
 
-            <!--这个插件是在打包时需要的，而这里暂时还没有用到-->
+            <!--这个插件是在打包时需要的-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -126,29 +86,6 @@
                 </executions>
             </plugin>
 
-            <!-- 用于给.yml文件传属性值 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                    <useDefaultDelimiters>true</useDefaultDelimiters>
-                    <!-- 配置 Maven 资源过滤 -->
-                    <filters>
-                        <filter>src/main/resources/filters/filter.properties</filter>
-                    </filters>
-                </configuration>
-            </plugin>
         </plugins>
-
-        <!-- 确保资源过滤生效 -->
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
     </build>
-
 </project>
