--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,7 @@
-# 设置启用的环境
 spring:
-  profiles:
-    active: ${profile.active}
-
----
-# 开发
-spring:
-  profiles: dev
-server:
-  port: 80
----
-# 生产
-spring:
-  profiles: pro
-server:
-  port: 81
----
-# 测试
-spring:
-  profiles: test
-server:
-  port: 82
----
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/spring_framework
+    username: root
+    password: zhenyouquhh213
+    type: com.alibaba.druid.pool.DruidDataSource
